# serializer version: 1
# name: test_example_snapshot[example-aggregation]
  dict({
    'events': list([
      dict({
        'graph': dict({
          'audio': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'description': 'Audio recordings of different speakers.',
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'default',
                }),
              ]),
              'id_columns': list([
                'audio_id',
              ]),
              'key': 'audio',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'default': '80200592',
            }),
            'metaxy_feature_version': '3dac67c8',
          }),
          'speaker/embedding': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'feature': 'audio',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'on': list([
                        'speaker_id',
                      ]),
                      'type': 'N:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'select': None,
                  'sql_filters': None,
                }),
              ]),
              'description': '''
                Speaker embedding aggregated from all their audio recordings.
                
                This demonstrates N:1 aggregation lineage where multiple audio recordings
                from the same speaker are aggregated into a single speaker embedding.
              ''',
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'embedding',
                }),
              ]),
              'id_columns': list([
                'speaker_id',
              ]),
              'key': 'speaker/embedding',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'embedding': '27a15391',
            }),
            'metaxy_feature_version': 'a485fa5b',
          }),
        }),
        'project_version': '1661b8b7',
        'scenario_name': 'Initial pipeline run',
        'step_name': None,
        'type': 'graph_pushed',
      }),
      dict({
        'command': 'python pipeline.py',
        'returncode': 0,
        'scenario_name': 'Initial pipeline run',
        'step_name': 'run_pipeline',
        'type': 'command_executed',
      }),
      dict({
        'command': 'python pipeline.py',
        'returncode': 0,
        'scenario_name': 'Idempotent rerun',
        'step_name': None,
        'type': 'command_executed',
      }),
      dict({
        'graph': dict({
          'audio': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'description': 'Audio recordings of different speakers.',
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'default',
                }),
              ]),
              'id_columns': list([
                'audio_id',
              ]),
              'key': 'audio',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'default': '80200592',
            }),
            'metaxy_feature_version': '3dac67c8',
          }),
          'speaker/embedding': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'feature': 'audio',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'on': list([
                        'speaker_id',
                      ]),
                      'type': 'N:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'select': None,
                  'sql_filters': None,
                }),
              ]),
              'description': '''
                Speaker embedding aggregated from all their audio recordings.
                
                This demonstrates N:1 aggregation lineage where multiple audio recordings
                from the same speaker are aggregated into a single speaker embedding.
              ''',
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'embedding',
                }),
              ]),
              'id_columns': list([
                'speaker_id',
              ]),
              'key': 'speaker/embedding',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'embedding': '27a15391',
            }),
            'metaxy_feature_version': 'a485fa5b',
          }),
        }),
        'project_version': '1661b8b7',
        'scenario_name': 'Update one audio - only affected speaker recomputed',
        'step_name': None,
        'type': 'graph_pushed',
      }),
      dict({
        'after_graph': dict({
          'audio': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'description': 'Audio recordings of different speakers.',
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'default',
                }),
              ]),
              'id_columns': list([
                'audio_id',
              ]),
              'key': 'audio',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'default': '80200592',
            }),
            'metaxy_feature_version': '3dac67c8',
          }),
          'speaker/embedding': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'feature': 'audio',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'on': list([
                        'speaker_id',
                      ]),
                      'type': 'N:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'select': None,
                  'sql_filters': None,
                }),
              ]),
              'description': '''
                Speaker embedding aggregated from all their audio recordings.
                
                This demonstrates N:1 aggregation lineage where multiple audio recordings
                from the same speaker are aggregated into a single speaker embedding.
              ''',
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'embedding',
                }),
              ]),
              'id_columns': list([
                'speaker_id',
              ]),
              'key': 'speaker/embedding',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'embedding': '27a15391',
            }),
            'metaxy_feature_version': 'a485fa5b',
          }),
        }),
        'after_snapshot': '1661b8b7',
        'before_graph': dict({
          'audio': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'description': 'Audio recordings of different speakers.',
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'default',
                }),
              ]),
              'id_columns': list([
                'audio_id',
              ]),
              'key': 'audio',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'default': '80200592',
            }),
            'metaxy_feature_version': '3dac67c8',
          }),
          'speaker/embedding': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'feature': 'audio',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'on': list([
                        'speaker_id',
                      ]),
                      'type': 'N:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'select': None,
                  'sql_filters': None,
                }),
              ]),
              'description': '''
                Speaker embedding aggregated from all their audio recordings.
                
                This demonstrates N:1 aggregation lineage where multiple audio recordings
                from the same speaker are aggregated into a single speaker embedding.
              ''',
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'embedding',
                }),
              ]),
              'id_columns': list([
                'speaker_id',
              ]),
              'key': 'speaker/embedding',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'embedding': '27a15391',
            }),
            'metaxy_feature_version': 'a485fa5b',
          }),
        }),
        'before_snapshot': '1661b8b7',
        'patch_path': 'patches/01_update_audio_provenance.patch',
        'scenario_name': 'Update one audio - only affected speaker recomputed',
        'step_name': None,
        'type': 'patch_applied',
      }),
      dict({
        'command': 'python pipeline.py',
        'returncode': 0,
        'scenario_name': 'Update one audio - only affected speaker recomputed',
        'step_name': None,
        'type': 'command_executed',
      }),
      dict({
        'graph': dict({
          'audio': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'description': 'Audio recordings of different speakers.',
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'default',
                }),
              ]),
              'id_columns': list([
                'audio_id',
              ]),
              'key': 'audio',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'default': '80200592',
            }),
            'metaxy_feature_version': '3dac67c8',
          }),
          'speaker/embedding': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'feature': 'audio',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'on': list([
                        'speaker_id',
                      ]),
                      'type': 'N:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'select': None,
                  'sql_filters': None,
                }),
              ]),
              'description': '''
                Speaker embedding aggregated from all their audio recordings.
                
                This demonstrates N:1 aggregation lineage where multiple audio recordings
                from the same speaker are aggregated into a single speaker embedding.
              ''',
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'embedding',
                }),
              ]),
              'id_columns': list([
                'speaker_id',
              ]),
              'key': 'speaker/embedding',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'embedding': '27a15391',
            }),
            'metaxy_feature_version': 'a485fa5b',
          }),
        }),
        'project_version': '1661b8b7',
        'scenario_name': 'Add new audio - only affected speaker recomputed',
        'step_name': None,
        'type': 'graph_pushed',
      }),
      dict({
        'after_graph': dict({
          'audio': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'description': 'Audio recordings of different speakers.',
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'default',
                }),
              ]),
              'id_columns': list([
                'audio_id',
              ]),
              'key': 'audio',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'default': '80200592',
            }),
            'metaxy_feature_version': '3dac67c8',
          }),
          'speaker/embedding': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'feature': 'audio',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'on': list([
                        'speaker_id',
                      ]),
                      'type': 'N:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'select': None,
                  'sql_filters': None,
                }),
              ]),
              'description': '''
                Speaker embedding aggregated from all their audio recordings.
                
                This demonstrates N:1 aggregation lineage where multiple audio recordings
                from the same speaker are aggregated into a single speaker embedding.
              ''',
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'embedding',
                }),
              ]),
              'id_columns': list([
                'speaker_id',
              ]),
              'key': 'speaker/embedding',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'embedding': '27a15391',
            }),
            'metaxy_feature_version': 'a485fa5b',
          }),
        }),
        'after_snapshot': '1661b8b7',
        'before_graph': dict({
          'audio': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'description': 'Audio recordings of different speakers.',
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'default',
                }),
              ]),
              'id_columns': list([
                'audio_id',
              ]),
              'key': 'audio',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'default': '80200592',
            }),
            'metaxy_feature_version': '3dac67c8',
          }),
          'speaker/embedding': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'feature': 'audio',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'on': list([
                        'speaker_id',
                      ]),
                      'type': 'N:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'select': None,
                  'sql_filters': None,
                }),
              ]),
              'description': '''
                Speaker embedding aggregated from all their audio recordings.
                
                This demonstrates N:1 aggregation lineage where multiple audio recordings
                from the same speaker are aggregated into a single speaker embedding.
              ''',
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'embedding',
                }),
              ]),
              'id_columns': list([
                'speaker_id',
              ]),
              'key': 'speaker/embedding',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'embedding': '27a15391',
            }),
            'metaxy_feature_version': 'a485fa5b',
          }),
        }),
        'before_snapshot': '1661b8b7',
        'patch_path': 'patches/02_add_audio.patch',
        'scenario_name': 'Add new audio - only affected speaker recomputed',
        'step_name': None,
        'type': 'patch_applied',
      }),
      dict({
        'command': 'python pipeline.py',
        'returncode': 0,
        'scenario_name': 'Add new audio - only affected speaker recomputed',
        'step_name': None,
        'type': 'command_executed',
      }),
      dict({
        'command': 'python pipeline.py',
        'returncode': 0,
        'scenario_name': 'Final idempotent check',
        'step_name': None,
        'type': 'command_executed',
      }),
    ]),
  })
# ---
# name: test_example_snapshot[example-basic]
  dict({
    'events': list([
      dict({
        'graph': dict({
          'examples/child': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'feature': 'examples/parent',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'select': None,
                  'sql_filters': None,
                }),
              ]),
              'description': 'Child feature that uses parent embeddings to generate predictions.',
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'predictions',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'examples/child',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'predictions': '9cd1c608',
            }),
            'metaxy_feature_version': 'b10ea448',
          }),
          'examples/parent': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'description': 'Parent feature that generates embeddings from raw data.',
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'embeddings',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'examples/parent',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'embeddings': '05e66510',
            }),
            'metaxy_feature_version': '7de0f5e8',
          }),
        }),
        'project_version': '490f2c18',
        'scenario_name': 'Setup upstream data',
        'step_name': None,
        'type': 'graph_pushed',
      }),
      dict({
        'command': 'python src/example_basic/setup_data.py',
        'returncode': 0,
        'scenario_name': 'Setup upstream data',
        'step_name': 'setup_data',
        'type': 'command_executed',
      }),
      dict({
        'command': 'python src/example_basic/pipeline.py',
        'returncode': 0,
        'scenario_name': 'Initial pipeline run',
        'step_name': 'initial_run',
        'type': 'command_executed',
      }),
      dict({
        'command': 'python src/example_basic/pipeline.py',
        'returncode': 0,
        'scenario_name': 'Idempotent rerun',
        'step_name': 'idempotent_run',
        'type': 'command_executed',
      }),
      dict({
        'graph': dict({
          'examples/child': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'feature': 'examples/parent',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'select': None,
                  'sql_filters': None,
                }),
              ]),
              'description': 'Child feature that uses parent embeddings to generate predictions.',
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'predictions',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'examples/child',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'predictions': '7cef6acb',
            }),
            'metaxy_feature_version': 'e5b92b18',
          }),
          'examples/parent': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'description': 'Parent feature that generates embeddings from raw data.',
              'fields': list([
                dict({
                  'code_version': '2',
                  'deps': list([
                  ]),
                  'key': 'embeddings',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'examples/parent',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'embeddings': '3c8d3e9b',
            }),
            'metaxy_feature_version': '68827f3e',
          }),
        }),
        'project_version': 'c423d51a',
        'scenario_name': 'Code evolution',
        'step_name': 'update_parent_version',
        'type': 'graph_pushed',
      }),
      dict({
        'after_graph': dict({
          'examples/child': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'feature': 'examples/parent',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'select': None,
                  'sql_filters': None,
                }),
              ]),
              'description': 'Child feature that uses parent embeddings to generate predictions.',
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'predictions',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'examples/child',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'predictions': '7cef6acb',
            }),
            'metaxy_feature_version': 'e5b92b18',
          }),
          'examples/parent': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'description': 'Parent feature that generates embeddings from raw data.',
              'fields': list([
                dict({
                  'code_version': '2',
                  'deps': list([
                  ]),
                  'key': 'embeddings',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'examples/parent',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'embeddings': '3c8d3e9b',
            }),
            'metaxy_feature_version': '68827f3e',
          }),
        }),
        'after_snapshot': 'c423d51a',
        'before_graph': dict({
          'examples/child': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'feature': 'examples/parent',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'select': None,
                  'sql_filters': None,
                }),
              ]),
              'description': 'Child feature that uses parent embeddings to generate predictions.',
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'predictions',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'examples/child',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'predictions': '9cd1c608',
            }),
            'metaxy_feature_version': 'b10ea448',
          }),
          'examples/parent': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'description': 'Parent feature that generates embeddings from raw data.',
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'embeddings',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'examples/parent',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'embeddings': '05e66510',
            }),
            'metaxy_feature_version': '7de0f5e8',
          }),
        }),
        'before_snapshot': '490f2c18',
        'patch_path': 'patches/01_update_parent_algorithm.patch',
        'scenario_name': 'Code evolution',
        'step_name': 'update_parent_version',
        'type': 'patch_applied',
      }),
      dict({
        'command': 'python src/example_basic/pipeline.py',
        'returncode': 0,
        'scenario_name': 'Code evolution',
        'step_name': 'recompute_after_change',
        'type': 'command_executed',
      }),
    ]),
  })
# ---
# name: test_example_snapshot[example-ducklake]
  dict({
    'events': list([
      dict({
        'command': 'python src/example_ducklake/pipeline.py',
        'returncode': 0,
        'scenario_name': 'DuckLake pipeline run',
        'step_name': 'run_demo',
        'type': 'command_executed',
      }),
    ]),
  })
# ---
# name: test_example_snapshot[example-expansion]
  dict({
    'events': list([
      dict({
        'graph': dict({
          'video/chunk': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'feature': 'video/raw',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'id_generation_pattern': None,
                      'on': list([
                        'video_id',
                      ]),
                      'type': '1:N',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'select': None,
                  'sql_filters': None,
                }),
              ]),
              'description': None,
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'audio',
                }),
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'frames',
                }),
              ]),
              'id_columns': list([
                'video_chunk_id',
              ]),
              'key': 'video/chunk',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'audio': '1549b1fa',
              'frames': 'df8943d3',
            }),
            'metaxy_feature_version': '7dc3712a',
          }),
          'video/faces': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'feature': 'video/chunk',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'select': None,
                  'sql_filters': None,
                }),
              ]),
              'description': None,
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                    dict({
                      'feature': 'video/chunk',
                      'fields': list([
                        'frames',
                      ]),
                    }),
                  ]),
                  'key': 'faces',
                }),
              ]),
              'id_columns': list([
                'video_chunk_id',
              ]),
              'key': 'video/faces',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'faces': '0561bd8c',
            }),
            'metaxy_feature_version': '52f055e3',
          }),
          'video/raw': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'description': None,
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'audio',
                }),
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'frames',
                }),
              ]),
              'id_columns': list([
                'video_id',
              ]),
              'key': 'video/raw',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'audio': '7132721c',
              'frames': '3f6f401c',
            }),
            'metaxy_feature_version': 'd842b740',
          }),
        }),
        'project_version': 'e4f2187a',
        'scenario_name': 'Initial pipeline run',
        'step_name': None,
        'type': 'graph_pushed',
      }),
      dict({
        'command': 'python pipeline.py',
        'returncode': 0,
        'scenario_name': 'Initial pipeline run',
        'step_name': 'initial_run',
        'type': 'command_executed',
      }),
      dict({
        'command': 'python pipeline.py',
        'returncode': 0,
        'scenario_name': 'Idempotent rerun',
        'step_name': 'idempotent_run',
        'type': 'command_executed',
      }),
      dict({
        'graph': dict({
          'video/chunk': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'feature': 'video/raw',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'id_generation_pattern': None,
                      'on': list([
                        'video_id',
                      ]),
                      'type': '1:N',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'select': None,
                  'sql_filters': None,
                }),
              ]),
              'description': None,
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'audio',
                }),
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'frames',
                }),
              ]),
              'id_columns': list([
                'video_chunk_id',
              ]),
              'key': 'video/chunk',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'audio': '7948d163',
              'frames': 'df8943d3',
            }),
            'metaxy_feature_version': '504507a9',
          }),
          'video/faces': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'feature': 'video/chunk',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'select': None,
                  'sql_filters': None,
                }),
              ]),
              'description': None,
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                    dict({
                      'feature': 'video/chunk',
                      'fields': list([
                        'frames',
                      ]),
                    }),
                  ]),
                  'key': 'faces',
                }),
              ]),
              'id_columns': list([
                'video_chunk_id',
              ]),
              'key': 'video/faces',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'faces': '0561bd8c',
            }),
            'metaxy_feature_version': '52f055e3',
          }),
          'video/raw': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'description': None,
              'fields': list([
                dict({
                  'code_version': '2',
                  'deps': list([
                  ]),
                  'key': 'audio',
                }),
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'frames',
                }),
              ]),
              'id_columns': list([
                'video_id',
              ]),
              'key': 'video/raw',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'audio': 'f8e35296',
              'frames': '3f6f401c',
            }),
            'metaxy_feature_version': '6e5a4ab8',
          }),
        }),
        'project_version': '9de76627',
        'scenario_name': 'Code change - audio field only',
        'step_name': 'update_audio_version',
        'type': 'graph_pushed',
      }),
      dict({
        'after_graph': dict({
          'video/chunk': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'feature': 'video/raw',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'id_generation_pattern': None,
                      'on': list([
                        'video_id',
                      ]),
                      'type': '1:N',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'select': None,
                  'sql_filters': None,
                }),
              ]),
              'description': None,
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'audio',
                }),
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'frames',
                }),
              ]),
              'id_columns': list([
                'video_chunk_id',
              ]),
              'key': 'video/chunk',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'audio': '7948d163',
              'frames': 'df8943d3',
            }),
            'metaxy_feature_version': '504507a9',
          }),
          'video/faces': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'feature': 'video/chunk',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'select': None,
                  'sql_filters': None,
                }),
              ]),
              'description': None,
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                    dict({
                      'feature': 'video/chunk',
                      'fields': list([
                        'frames',
                      ]),
                    }),
                  ]),
                  'key': 'faces',
                }),
              ]),
              'id_columns': list([
                'video_chunk_id',
              ]),
              'key': 'video/faces',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'faces': '0561bd8c',
            }),
            'metaxy_feature_version': '52f055e3',
          }),
          'video/raw': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'description': None,
              'fields': list([
                dict({
                  'code_version': '2',
                  'deps': list([
                  ]),
                  'key': 'audio',
                }),
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'frames',
                }),
              ]),
              'id_columns': list([
                'video_id',
              ]),
              'key': 'video/raw',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'audio': 'f8e35296',
              'frames': '3f6f401c',
            }),
            'metaxy_feature_version': '6e5a4ab8',
          }),
        }),
        'after_snapshot': '9de76627',
        'before_graph': dict({
          'video/chunk': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'feature': 'video/raw',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'id_generation_pattern': None,
                      'on': list([
                        'video_id',
                      ]),
                      'type': '1:N',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'select': None,
                  'sql_filters': None,
                }),
              ]),
              'description': None,
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'audio',
                }),
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'frames',
                }),
              ]),
              'id_columns': list([
                'video_chunk_id',
              ]),
              'key': 'video/chunk',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'audio': '1549b1fa',
              'frames': 'df8943d3',
            }),
            'metaxy_feature_version': '7dc3712a',
          }),
          'video/faces': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'feature': 'video/chunk',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'select': None,
                  'sql_filters': None,
                }),
              ]),
              'description': None,
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                    dict({
                      'feature': 'video/chunk',
                      'fields': list([
                        'frames',
                      ]),
                    }),
                  ]),
                  'key': 'faces',
                }),
              ]),
              'id_columns': list([
                'video_chunk_id',
              ]),
              'key': 'video/faces',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'faces': '0561bd8c',
            }),
            'metaxy_feature_version': '52f055e3',
          }),
          'video/raw': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'description': None,
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'audio',
                }),
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'frames',
                }),
              ]),
              'id_columns': list([
                'video_id',
              ]),
              'key': 'video/raw',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'audio': '7132721c',
              'frames': '3f6f401c',
            }),
            'metaxy_feature_version': 'd842b740',
          }),
        }),
        'before_snapshot': 'e4f2187a',
        'patch_path': 'patches/01_update_video_code_version.patch',
        'scenario_name': 'Code change - audio field only',
        'step_name': 'update_audio_version',
        'type': 'patch_applied',
      }),
      dict({
        'command': 'python pipeline.py',
        'returncode': 0,
        'scenario_name': 'Code change - audio field only',
        'step_name': 'recompute_after_audio_change',
        'type': 'command_executed',
      }),
      dict({
        'command': 'python pipeline.py',
        'returncode': 0,
        'scenario_name': 'Final idempotent check',
        'step_name': 'final_idempotent_check',
        'type': 'command_executed',
      }),
    ]),
  })
# ---
# name: test_example_snapshot[example-overview]
  dict({
    'events': list([
      dict({
        'graph': dict({
          'example/crop': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'feature': 'example/video',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'select': None,
                  'sql_filters': None,
                }),
              ]),
              'description': None,
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                    dict({
                      'feature': 'example/video',
                      'fields': list([
                        'audio',
                      ]),
                    }),
                  ]),
                  'key': 'audio',
                }),
                dict({
                  'code_version': '1',
                  'deps': list([
                    dict({
                      'feature': 'example/video',
                      'fields': list([
                        'frames',
                      ]),
                    }),
                  ]),
                  'key': 'frames',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'example/crop',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'audio': '4c726c4b',
              'frames': '2419e09d',
            }),
            'metaxy_feature_version': '34d75856',
          }),
          'example/face_detection': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'feature': 'example/crop',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'select': None,
                  'sql_filters': None,
                }),
              ]),
              'description': None,
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                    dict({
                      'feature': 'example/crop',
                      'fields': list([
                        'frames',
                      ]),
                    }),
                  ]),
                  'key': 'faces',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'example/face_detection',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'faces': '006efeef',
            }),
            'metaxy_feature_version': 'f1526ee0',
          }),
          'example/stt': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'feature': 'example/video',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'select': None,
                  'sql_filters': None,
                }),
              ]),
              'description': None,
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                    dict({
                      'feature': 'example/video',
                      'fields': list([
                        'audio',
                      ]),
                    }),
                  ]),
                  'key': 'transcription',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'example/stt',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'transcription': '3ec3826d',
            }),
            'metaxy_feature_version': 'd953dea4',
          }),
          'example/video': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'description': 'Video metadata feature (root).',
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'audio',
                }),
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'frames',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'example/video',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'audio': '22742381',
              'frames': '794116a9',
            }),
            'metaxy_feature_version': 'c2ac395f',
          }),
        }),
        'project_version': '2f02765d',
        'scenario_name': 'Initial feature graph',
        'step_name': None,
        'type': 'graph_pushed',
      }),
      dict({
        'command': 'metaxy push',
        'returncode': 0,
        'scenario_name': 'Initial feature graph',
        'step_name': 'push_graph',
        'type': 'command_executed',
      }),
      dict({
        'command': 'metaxy graph render --format mermaid',
        'returncode': 0,
        'scenario_name': 'Initial feature graph',
        'step_name': 'render_graph',
        'type': 'command_executed',
      }),
      dict({
        'graph': dict({
          'example/crop': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'feature': 'example/video',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'select': None,
                  'sql_filters': None,
                }),
              ]),
              'description': None,
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                    dict({
                      'feature': 'example/video',
                      'fields': list([
                        'audio',
                      ]),
                    }),
                  ]),
                  'key': 'audio',
                }),
                dict({
                  'code_version': '1',
                  'deps': list([
                    dict({
                      'feature': 'example/video',
                      'fields': list([
                        'frames',
                      ]),
                    }),
                  ]),
                  'key': 'frames',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'example/crop',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'audio': 'e2b6ce39',
              'frames': '2419e09d',
            }),
            'metaxy_feature_version': 'fe237dc9',
          }),
          'example/face_detection': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'feature': 'example/crop',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'select': None,
                  'sql_filters': None,
                }),
              ]),
              'description': None,
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                    dict({
                      'feature': 'example/crop',
                      'fields': list([
                        'frames',
                      ]),
                    }),
                  ]),
                  'key': 'faces',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'example/face_detection',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'faces': '006efeef',
            }),
            'metaxy_feature_version': 'f1526ee0',
          }),
          'example/stt': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'feature': 'example/video',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'select': None,
                  'sql_filters': None,
                }),
              ]),
              'description': None,
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                    dict({
                      'feature': 'example/video',
                      'fields': list([
                        'audio',
                      ]),
                    }),
                  ]),
                  'key': 'transcription',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'example/stt',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'transcription': '9f7ea40c',
            }),
            'metaxy_feature_version': 'e57e7555',
          }),
          'example/video': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'description': 'Video metadata feature (root).',
              'fields': list([
                dict({
                  'code_version': '2',
                  'deps': list([
                  ]),
                  'key': 'audio',
                }),
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'frames',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'example/video',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'audio': '09c8398b',
              'frames': '794116a9',
            }),
            'metaxy_feature_version': '2faffb98',
          }),
        }),
        'project_version': '904994fe',
        'scenario_name': 'Code change - audio field',
        'step_name': 'update_audio_version',
        'type': 'graph_pushed',
      }),
      dict({
        'after_graph': dict({
          'example/crop': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'feature': 'example/video',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'select': None,
                  'sql_filters': None,
                }),
              ]),
              'description': None,
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                    dict({
                      'feature': 'example/video',
                      'fields': list([
                        'audio',
                      ]),
                    }),
                  ]),
                  'key': 'audio',
                }),
                dict({
                  'code_version': '1',
                  'deps': list([
                    dict({
                      'feature': 'example/video',
                      'fields': list([
                        'frames',
                      ]),
                    }),
                  ]),
                  'key': 'frames',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'example/crop',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'audio': 'e2b6ce39',
              'frames': '2419e09d',
            }),
            'metaxy_feature_version': 'fe237dc9',
          }),
          'example/face_detection': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'feature': 'example/crop',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'select': None,
                  'sql_filters': None,
                }),
              ]),
              'description': None,
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                    dict({
                      'feature': 'example/crop',
                      'fields': list([
                        'frames',
                      ]),
                    }),
                  ]),
                  'key': 'faces',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'example/face_detection',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'faces': '006efeef',
            }),
            'metaxy_feature_version': 'f1526ee0',
          }),
          'example/stt': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'feature': 'example/video',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'select': None,
                  'sql_filters': None,
                }),
              ]),
              'description': None,
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                    dict({
                      'feature': 'example/video',
                      'fields': list([
                        'audio',
                      ]),
                    }),
                  ]),
                  'key': 'transcription',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'example/stt',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'transcription': '9f7ea40c',
            }),
            'metaxy_feature_version': 'e57e7555',
          }),
          'example/video': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'description': 'Video metadata feature (root).',
              'fields': list([
                dict({
                  'code_version': '2',
                  'deps': list([
                  ]),
                  'key': 'audio',
                }),
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'frames',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'example/video',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'audio': '09c8398b',
              'frames': '794116a9',
            }),
            'metaxy_feature_version': '2faffb98',
          }),
        }),
        'after_snapshot': '904994fe',
        'before_graph': dict({
          'example/crop': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'feature': 'example/video',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'select': None,
                  'sql_filters': None,
                }),
              ]),
              'description': None,
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                    dict({
                      'feature': 'example/video',
                      'fields': list([
                        'audio',
                      ]),
                    }),
                  ]),
                  'key': 'audio',
                }),
                dict({
                  'code_version': '1',
                  'deps': list([
                    dict({
                      'feature': 'example/video',
                      'fields': list([
                        'frames',
                      ]),
                    }),
                  ]),
                  'key': 'frames',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'example/crop',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'audio': '4c726c4b',
              'frames': '2419e09d',
            }),
            'metaxy_feature_version': '34d75856',
          }),
          'example/face_detection': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'feature': 'example/crop',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'select': None,
                  'sql_filters': None,
                }),
              ]),
              'description': None,
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                    dict({
                      'feature': 'example/crop',
                      'fields': list([
                        'frames',
                      ]),
                    }),
                  ]),
                  'key': 'faces',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'example/face_detection',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'faces': '006efeef',
            }),
            'metaxy_feature_version': 'f1526ee0',
          }),
          'example/stt': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'feature': 'example/video',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'select': None,
                  'sql_filters': None,
                }),
              ]),
              'description': None,
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                    dict({
                      'feature': 'example/video',
                      'fields': list([
                        'audio',
                      ]),
                    }),
                  ]),
                  'key': 'transcription',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'example/stt',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'transcription': '3ec3826d',
            }),
            'metaxy_feature_version': 'd953dea4',
          }),
          'example/video': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'description': 'Video metadata feature (root).',
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'audio',
                }),
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'frames',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'example/video',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'audio': '22742381',
              'frames': '794116a9',
            }),
            'metaxy_feature_version': 'c2ac395f',
          }),
        }),
        'before_snapshot': '2f02765d',
        'patch_path': 'patches/01_update_audio_version.patch',
        'scenario_name': 'Code change - audio field',
        'step_name': 'update_audio_version',
        'type': 'patch_applied',
      }),
      dict({
        'command': 'metaxy graph-diff render latest current --format mermaid',
        'returncode': 0,
        'scenario_name': 'Code change - audio field',
        'step_name': 'render_diff',
        'type': 'command_executed',
      }),
    ]),
  })
# ---
# name: test_example_snapshot[example-quickstart]
  dict({
    'events': list([
      dict({
        'graph': dict({
          'audio': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'feature': 'video',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'select': None,
                  'sql_filters': None,
                }),
              ]),
              'description': None,
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'default',
                }),
              ]),
              'id_columns': list([
                'id',
              ]),
              'key': 'audio',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'default': '91af2f82',
            }),
            'metaxy_feature_version': '9680125a',
          }),
          'video': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'description': None,
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'default',
                }),
              ]),
              'id_columns': list([
                'id',
              ]),
              'key': 'video',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'default': 'c675833f',
            }),
            'metaxy_feature_version': '4c78e5e2',
          }),
        }),
        'project_version': 'e5cdf3ba',
        'scenario_name': 'Initial pipeline run',
        'step_name': None,
        'type': 'graph_pushed',
      }),
      dict({
        'command': 'python src/example_quickstart/pipeline.py',
        'returncode': 0,
        'scenario_name': 'Initial pipeline run',
        'step_name': 'initial_run',
        'type': 'command_executed',
      }),
      dict({
        'command': 'python src/example_quickstart/pipeline.py',
        'returncode': 0,
        'scenario_name': 'Idempotent rerun',
        'step_name': 'idempotent_run',
        'type': 'command_executed',
      }),
    ]),
  })
# ---
